dev-auth-server: add applicationName, refactor BoatnetUser
